gccida/g2/find_pdom
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_pdom/src/ssa-dce.c:737:30: error: use of undeclared identifier 'va'
fancy_abort( ( const char *)&va, 273, "find_pdom"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_pdom/src/ssa-dce.c:740:30: error: use of undeclared identifier 'va'
fancy_abort( ( const char *)&va, 275, "find_pdom"); 
                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_pdom/src/obj/ssa-dce.o] Error 1
